--- a/src/styles/_modals.sass
+++ b/src/styles/_modals.sass
@@ -65,15 +65,15 @@
 
     .prev, .next
       height: 100%
-      background: center center / 100% no-repeat
+      background: no-repeat center center / 100%
       flex: 0 0 1.5rem
       cursor: pointer
 
     .prev
-      background-image: url(img/icons/back.svg)
+      background-image: url('images/icons/back.svg')
 
     .next
-      background-image: url(img/icons/forward.svg)
+      background-image: url('images/icons/forward.svg')
 
     .caption
       flex: 1 0 0
@@ -120,7 +120,7 @@
   z-index: 300
   right: .5rem
   top: .5rem
-  background: url(img/icons/close.svg) center center / 100% no-repeat
+  background: url('images/icons/close.svg') no-repeat center center / 100%
   cursor: pointer
 
 .modal-backdrop
