Single quotes formatting

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -80,7 +80,7 @@ html(lang='en')
           .status#msg-status
         .to-top
           p
-            a(href="#top")
+            a(href='#top')
               span Scroll to top
               span.emoji(role='img' aria-label='Scroll up icon') &#x261D;
         .copyright
