--- a/src/styles/_sections.sass
+++ b/src/styles/_sections.sass
@@ -132,7 +132,7 @@ header
         text-decoration: underline
 
       &::after
-        content: " »"
+        content: ' \00bb'
 
     .image-box
       margin: 0 .25rem .25rem
