--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -4,7 +4,7 @@ $mdWidth: 724px
 $lgWidth: 1024px
 
 // Fonts
-$fontFam: "Helvetica Neue", "Helvetica", sans-serif
+$fontFam: 'Helvetica Neue', 'Helvetica', sans-serif
 
 // Colors
 $lightColor: rgba(255, 255, 255, 1)
