--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -24,7 +24,7 @@ html(lang='en')
     header#top
       .container
         .logo
-          svg(xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192')
+          svg(xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192' role='img' aria-label='Max Segale logo')
             path(d='M96,0a96,96,0,1,0,96,96A96,96,0,0,0,96,0Zm0,174a78,78,0,1,1,78-78A78.09,78.09,0,0,1,96,174Z')
             polygon(points='96.73 85.99 76.04 48.87 48 48.87 48 143.13 68.16 143.13 67.23 69.43 90.33 111.36 101.81 111.36 124.77 69.7 123.7 143.13 144 143.13 144 48.87 117.43 48.87 96.73 85.99')
         h1.heading-2.title Portfolio
