--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -35,16 +35,16 @@ html(lang='en')
         h3.heading-2 I specialize in front-end web development and UI/UX design
       .image-row.left#hero-images-1
         each image in heroImages[0]
-          img(src='images/' + image.file alt=image.caption)
+          img(src=image.file alt=image.caption)
       .image-row.right#hero-images-2
         each image in heroImages[1]
-          img(src='images/' + image.file alt=image.caption)
+          img(src=image.file alt=image.caption)
 
     section.intro
       .container
         h3.heading-2 About
         .picture(title='Hello, World!')
-          img(src='images/me.jpg' alt='A photo of me')
+          img(src='me.jpg' alt='A photo of me')
         p
           span I work as a full-stack web developer and graphic designer.
           span I specialize in front-end development and UI/UX design.
