iPhone rounded corners class

--- a/src/styles/_globals.sass
+++ b/src/styles/_globals.sass
@@ -107,3 +107,9 @@ button
 
 .no-break
   white-space: nowrap
+
+.iphone-corners-p
+  border-radius: 10.6666666667% / 4.9261083744%
+
+.iphone-corners-l
+  border-radius: 4.9261083744% / 10.6666666667%
