--- a/src/styles/_modals.sass
+++ b/src/styles/_modals.sass
@@ -30,14 +30,16 @@
     width: 100%
     height: 100%
     margin: 2vh 0
+    padding: 0 2vw
     flex: 1 1 0
 
-    > .img
+    > .image
       height: 100%
       flex: 0 1 0
       position: relative
       overflow: hidden
       opacity: 0
+      cursor: pointer
       transition: flex 250ms linear, opacity 250ms linear
 
       > img
@@ -49,7 +51,6 @@
         transform: translate(-50%, -50%)
         object-position: center center
         object-fit: contain
-        cursor: pointer
 
       &.selected
         flex: 1 1 0
@@ -70,10 +71,10 @@
       cursor: pointer
 
     .prev
-      background-image: url('images/icons/back.svg')
+      background-image: url('back.svg')
 
     .next
-      background-image: url('images/icons/forward.svg')
+      background-image: url('forward.svg')
 
     .caption
       flex: 1 0 0
@@ -120,7 +121,7 @@
   z-index: 300
   right: .5rem
   top: .5rem
-  background: url('images/icons/close.svg') no-repeat center center / 100%
+  background: url('close.svg') no-repeat center center / 100%
   cursor: pointer
 
 .modal-backdrop
