Updated about me

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -32,7 +32,7 @@ html(lang='en')
     section.hero
       .container.headline
         h2.heading-1 Hello, my name is Max
-        h3.heading-2 I specialize in front-end web development and UI/UX design
+        h3.heading-2 I am a front-end web developer and designer
       .image-row.left#hero-images-1
         each image in heroImages[0]
           img(src=image.file alt=image.caption)
@@ -46,10 +46,11 @@ html(lang='en')
         .picture(title='Hello, World!')
           img(src='me.jpg' alt='A photo of me')
         p
-          span I work as a full-stack web developer and graphic designer.
-          span I specialize in front-end development and UI/UX design.
+          span I specialize in front-end web development and UI/UX design.
+          span I have also worked as a full-stack web application engineer and graphic designer.
         p
-          span This a collection of some freelance work and personal projects.
+          span This portfolio is only a collection of my personal projects.
+          span It does not include any of the recent work I have been doing for marketing agencies, or my previous role developing web-based publishing software.
           span More exciting projects are in development, so stay tuned!
         p
           span I built this site using HTML5/Pug, CSS3/Sass, JavaScript, MySQL, and PHP.
@@ -58,7 +59,7 @@ html(lang='en')
             span View Source Code
             span.emoji(role='img' aria-label='Source icon') &#x1F6E0;
         p
-          span Please contact me about any new projects or job opportunities.
+          span Please contact me if you would like to learn more about me or my work. I am always interested in new projects and job opportunities.
         p
           a(href='mailto:' + myEmail)
             span #{myEmail}
