Updated click functionality

--- a/src/styles/_globals.sass
+++ b/src/styles/_globals.sass
@@ -108,8 +108,20 @@ button
 .no-break
   white-space: nowrap
 
+.no-select
+  user-select: none
+
 .iphone-corners-p
   border-radius: 10.6666666667% / 4.9261083744%
 
 .iphone-corners-l
   border-radius: 4.9261083744% / 10.6666666667%
+
+.image-glass
+  content: ' '
+  display: block
+  width: 100%
+  height: 100%
+  position: absolute
+  left: 0
+  top: 0
