--- a/src/styles/_modals.sass
+++ b/src/styles/_modals.sass
@@ -1,5 +1,6 @@
 // Project pop-up view
 .modal-project
+  @extend .no-select
   width: 100%
   height: 100%
   padding: 4vh 0
@@ -51,6 +52,9 @@
         transform: translate(-50%, -50%)
         object-position: center center
         object-fit: contain
+
+      &::after
+        @extend .image-glass
 
       &.selected
         flex: 1 1 0
