--- a/src/styles/_sections.sass
+++ b/src/styles/_sections.sass
@@ -27,9 +27,10 @@ header
 
 // Hero section
 .hero
+  position: relative
   height: 100vw
   max-height: 50vh
-  position: relative
+  background: $boxColor
   overflow: hidden
 
   .headline
@@ -47,19 +48,25 @@ header
       backdrop-filter: blur(32px)
 
   .image-row
+    position: absolute
+    z-index: 0
+    min-width: 100%
     height: 50%
     display: flex
     flex-flow: row nowrap
-    position: absolute
-    z-index: 0
+    align-items: stretch
 
     img
       height: 100%
+      margin: 0 .25rem
+      box-shadow: 0 0 .2rem 0 rgba(0, 0, 0, .4)
       will-change: opacity, transform
 
     &.left
       left: 0
       top: 0
+      padding: .5rem 0 .25rem
+      justify-content: flex-start
       will-change: left
 
       img
@@ -68,6 +75,8 @@ header
     &.right
       right: 0
       bottom: 0
+      padding: .25rem 0 .5rem
+      justify-content: flex-end
       will-change: right
 
       img
