--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -3,7 +3,9 @@
   const myEmail = 'info@maxsegale.com';
   const siteTitle = `${myName} | Portfolio`;
   const siteDesc = `A portfolio of work from ${myName}, web developer and designer.`;
-  const heroImages = locals.featured.images;
+  const featuredImages = locals.featured.media;
+
+include mixins
 
 doctype html
 html(lang='en')
@@ -33,12 +35,8 @@ html(lang='en')
       .container.headline
         h2.heading-1 Hello, my name is Max
         h3.heading-2 I am a front-end web developer and designer
-      .image-row.left#hero-images-1
-        each image in heroImages[0]
-          img(src=image.file alt=image.caption)
-      .image-row.right#hero-images-2
-        each image in heroImages[1]
-          img(src=image.file alt=image.caption)
+      +mediaRow('hero-images-1', 'left', featuredImages[0])
+      +mediaRow('hero-images-2', 'right', featuredImages[1])
 
     section.intro
       .container
