--- a/src/styles/_sections.sass
+++ b/src/styles/_sections.sass
@@ -48,24 +48,18 @@ header
       backdrop-filter: blur(32px)
 
   .image-row
+    @extend .no-select
     position: absolute
     z-index: 0
-    min-width: 100%
     height: 50%
     display: flex
     flex-flow: row nowrap
     align-items: stretch
 
-    img
-      height: 100%
-      margin: 0 .25rem
-      box-shadow: 0 0 .2rem 0 rgba(0, 0, 0, .4)
-      will-change: opacity, transform
-
     &.left
       left: 0
       top: 0
-      padding: .5rem 0 .25rem
+      padding: .25rem .25rem 0
       justify-content: flex-start
       will-change: left
 
@@ -75,12 +69,26 @@ header
     &.right
       right: 0
       bottom: 0
-      padding: .25rem 0 .5rem
+      padding: 0 .25rem .25rem
       justify-content: flex-end
       will-change: right
 
       img
         animation: heroImgRight 2s ease-out
+
+  .image-box
+    position: relative
+    height: 100%
+    flex: 0 0 0
+    padding: .25rem
+
+    img
+      height: 100%
+      box-shadow: 0 0 .2rem 0 rgba(0, 0, 0, .4)
+      will-change: opacity, transform
+
+    &::after
+      @extend .image-glass
 
 // Intro section
 .intro
