Updated names and values

--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -1,17 +1,18 @@
 // Responsive breakpoints
 $smWidth: 568px
-$mdWidth: 724px
+$mdWidth: 768px
 $lgWidth: 1024px
 
 // Fonts
 $fontFam: 'Helvetica Neue', 'Helvetica', sans-serif
 
 // Colors
-$lightColor: rgba(255, 255, 255, 1)
-$midColor: rgba(140, 140, 140, 1)
-$darkColor: rgba(0, 0, 0, 1)
-$boxColor: rgba(222, 222, 222, 1)
-$accentColor: rgba(10, 132, 255, 1)
-$lightTrans: rgba(255, 255, 255, .75)
-$midTrans: rgba(50, 50, 50, .96)
-$darkTrans: rgba(0, 0, 0, .8)
+$colorLight: rgb(255, 255, 255)
+$colorMid: rgb(140, 140, 140)
+$colorDark: rgb(0, 0, 0)
+$colorBox: rgb(222, 222, 222)
+$colorAccent: rgb(10, 132, 255)
+$colorLightTrans: rgba(255, 255, 255, .75)
+$colorMidTrans: rgba(50, 50, 50, .96)
+$colorDarkTrans: rgba(0, 0, 0, .8)
+$colorShadow: rgba(0, 0, 0, .4)
