--- a/src/styles/_globals.sass
+++ b/src/styles/_globals.sass
@@ -6,8 +6,8 @@
   box-sizing: border-box
 
   &::selection
-    color: $lightColor
-    background-color: $accentColor
+    color: $colorLight
+    background-color: $colorAccent
 
 html, body
   width: 100%
@@ -15,8 +15,8 @@ html, body
   text-align: left
   font-size: 16px
   font-family: $fontFam
-  color: $darkColor
-  background-color: $lightColor
+  color: $colorDark
+  background-color: $colorLight
   scroll-behavior: smooth
   text-size-adjust: none
   -webkit-touch-callout: none
@@ -41,7 +41,7 @@ p
   margin: 1rem 0
 
   a > span
-    color: $accentColor
+    color: $colorAccent
     text-decoration: underline
 
 ul
@@ -60,16 +60,16 @@ button
   border-radius: .25rem
   padding: .25rem .75rem
   text-align: center
-  color: $lightColor
-  background-color: $accentColor
+  color: $colorLight
+  background-color: $colorAccent
   cursor: pointer
   transition: box-shadow 125ms linear
 
   &:hover
-    box-shadow: inset 0 0 .25rem 0 $darkTrans
+    box-shadow: inset 0 0 .25rem 0 $colorDarkTrans
 
   &:active
-    box-shadow: inset 0 0 .5rem 0 $darkTrans
+    box-shadow: inset 0 0 .5rem 0 $colorDarkTrans
 
 // General classes
 .container
