--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -45,13 +45,13 @@ html(lang='en')
           img(src='me.jpg' alt='A photo of me')
         p
           span I specialize in front-end web development and UI/UX design.
-          span I have also worked as a full-stack web application engineer and graphic designer.
+          span I have also worked as a full-stack web application developer and a graphic designer.
         p
-          span This portfolio is only a collection of my personal projects.
+          span This portfolio is only a collection of my personal projects from over the years.
           span It does not include any of the recent work I have been doing for marketing agencies, or my previous role developing web-based publishing software.
           span More exciting projects are in development, so stay tuned!
         p
-          span I built this site using HTML5/Pug, CSS3/Sass, JavaScript, MySQL, and PHP.
+          span I built this site with Node, Gulp, HTML5/Pug, CSS3/Sass, JavaScript, MySQL, and PHP.
         p
           a(href='https://github.com/max-segale/portfolio/tree/master' target='_blank' rel='noopener')
             span View Source Code
