--- a/src/styles/_modals.sass
+++ b/src/styles/_modals.sass
@@ -34,16 +34,15 @@
     padding: 0 2vw
     flex: 1 1 0
 
-    > .image
+    .image
       height: 100%
       flex: 0 1 0
       position: relative
       overflow: hidden
       opacity: 0
-      cursor: pointer
       transition: flex 250ms linear, opacity 250ms linear
 
-      > img
+      img
         max-width: 100%
         max-height: 100%
         position: absolute
@@ -59,6 +58,10 @@
       &.selected
         flex: 1 1 0
         opacity: 1
+
+    &.multi
+      .image
+        cursor: pointer
 
   .ctrl-row
     width: 100%
@@ -90,7 +93,7 @@
     margin: 2vh 0 0
     padding: 0 .5rem
 
-    > .thumb
+    .thumb
       height: 1.5rem
       flex: 9 0 0
       margin-left: .5rem
@@ -102,7 +105,7 @@
       transition: flex 250ms linear
       cursor: pointer
 
-      > img
+      img
         width: 100%
         height: 100%
         object-position: center center
