--- a/src/styles/_globals.sass
+++ b/src/styles/_globals.sass
@@ -117,6 +117,9 @@ button
 .iphone-corners-l
   border-radius: 4.9261083744% / 10.6666666667%
 
+.mac-corners
+  border-radius: 1.3888888889% / 2.2222222222%
+
 .image-glass
   content: ' '
   display: block
