--- a/src/pages/mixins.pug
+++ b/src/pages/mixins.pug
@@ -7,6 +7,8 @@
       } else {
         imgClass = 'iphone-corners-p';
       }
+    } else if (image.type === 'MAC') {
+      imgClass = 'mac-corners';
     }
     return imgClass;
   };
