--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -45,7 +45,7 @@ html(lang='en')
           img(src='me.jpg' alt='A photo of me')
         p
           span I specialize in front-end web development and UI/UX design.
-          span I have also worked as a full-stack web application engineer and a graphic designer.
+          span I have also worked as a full-stack web application engineer and as a graphic designer.
         p
           span This portfolio is only a collection of my personal projects from over the years.
           span It does not include any of the recent work I have been doing for agencies, or my previous role developing web-based publishing software.
