--- a/src/styles/_modals.sass
+++ b/src/styles/_modals.sass
@@ -67,6 +67,7 @@
     width: 100%
     height: 1.5rem
     max-width: $smWidth
+    flex-basis: 1.5rem
     display: flex
     flex-flow: row nowrap
     padding: 0 .5rem
@@ -90,11 +91,12 @@
   .thumbs-row
     width: 100%
     max-width: $smWidth
+    flex-basis: 1.5rem
     margin: 2vh 0 0
     padding: 0 .5rem
 
     .thumb
-      height: 1.5rem
+      height: 100%
       flex: 9 0 0
       margin-left: .5rem
       border: 2px solid $colorLight
