--- a/src/styles/_sections.sass
+++ b/src/styles/_sections.sass
@@ -14,7 +14,7 @@ header
   .logo
     height: 100%
 
-    svg
+    img
       height: 100%
       will-change: transform
       animation: headerLogo 2s ease-out
