--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -17,9 +17,8 @@ html(lang='en')
     meta(name='copyright' content=myName)
     meta(name='viewport' content='width=device-width, initial-scale=1')
     title #{siteTitle}
-    link(rel='apple-touch-icon' sizes='180x180' href='apple-touch-icon.png')
-    link(rel='icon' type='image/png' sizes='32x32' href='favicon-32x32.png')
-    link(rel='icon' type='image/png' sizes='16x16' href='favicon-16x16.png')
+    link(rel='apple-touch-icon' sizes='57x57 72x72 76x76 114x114 120x120 144x144 152x152 180x180' href='apple-touch-icon.png')
+    link(rel='icon' type='image/png' sizes='16x16 32x32' href='favicon.png')
     link(rel='mask-icon' href='max-segale-logo.svg' color='#0a84ff')
     link(rel='stylesheet' type='text/css' href='style.css')
     script(type='text/javascript' src='main.js')
