--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -16,10 +16,9 @@ html(lang='en')
     meta(name='author' content=myName)
     meta(name='copyright' content=myName)
     meta(name='viewport' content='width=device-width, initial-scale=1')
-    title #{siteTitle}
-    link(rel='apple-touch-icon' sizes='57x57 72x72 76x76 114x114 120x120 144x144 152x152 180x180' href='apple-touch-icon.png')
-    link(rel='icon' type='image/png' sizes='16x16 32x32' href='favicon.png')
-    link(rel='mask-icon' href='max-segale-logo.svg' color='#0a84ff')
+    title #{siteTitle}    
+    link(rel='apple-touch-icon' type='image/svg+xml' sizes='any' href='favicon.svg')
+    link(rel='icon' type='image/svg+xml' sizes='any' href='favicon.svg')
     link(rel='stylesheet' type='text/css' href='style.css')
     script(type='text/javascript' src='main.js')
 
