Added image width and height

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -25,7 +25,7 @@ html(lang='en')
     header#top
       .container
         .logo
-          img(src='max-segale-logo.svg' alt='Max Segale logo')
+          img(src='max-segale-logo.svg' alt='Max Segale logo' width='16' height='16')
         h1.heading-2.title Portfolio
 
     section.hero
