--- a/src/styles/_modals.sass
+++ b/src/styles/_modals.sass
@@ -43,6 +43,8 @@
       transition: flex 250ms linear, opacity 250ms linear
 
       img
+        width: auto
+        height: auto
         max-width: 100%
         max-height: 100%
         position: absolute
@@ -65,7 +67,6 @@
 
   .ctrl-row
     width: 100%
-    height: 1.5rem
     max-width: $smWidth
     flex-basis: 1.5rem
     display: flex
