--- a/src/styles/_sections.sass
+++ b/src/styles/_sections.sass
@@ -12,12 +12,18 @@ header
     justify-content: flex-start
 
   .logo
+    @extend .no-select
+    position: relative
     height: 100%
 
     img
+      width: auto
       height: 100%
       will-change: transform
       animation: headerLogo 2s ease-out
+
+    &::after
+      @extend .image-glass
 
   .title
     margin: 0 0 0 2rem
@@ -178,6 +184,8 @@ section.gallery
       cursor: pointer
 
       img
+        width: auto
+        height: auto
         max-width: 100%
         max-height: 100%
         object-fit: contain
