--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -17,8 +17,8 @@ html(lang='en')
     meta(name='copyright' content=myName)
     meta(name='viewport' content='width=device-width, initial-scale=1')
     title #{siteTitle}
-    link(rel='apple-touch-icon' type='image/svg+xml' sizes='any' href='favicon.svg')
     link(rel='icon' type='image/svg+xml' sizes='any' href='favicon.svg')
+    link(rel='mask-icon' href='max-segale-logo.svg')
     link(rel='stylesheet' type='text/css' href='style.css')
     script(src='main.js')
 
