mask-icon color

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -18,7 +18,7 @@ html(lang='en')
     meta(name='viewport' content='width=device-width, initial-scale=1')
     title #{siteTitle}
     link(rel='icon' type='image/svg+xml' sizes='any' href='favicon.svg')
-    link(rel='mask-icon' href='max-segale-logo.svg')
+    link(rel='mask-icon' href='max-segale-logo.svg' color='#000000')
     link(rel='stylesheet' type='text/css' href='style.css')
     script(src='main.js')
 
