--- a/src/styles/_globals.sass
+++ b/src/styles/_globals.sass
@@ -53,23 +53,9 @@ img
 input, textarea, button
   font-family: $fontFam
   font-size: 1rem
-  outline: none
+  background: transparent
   appearance: none
-
-button
-  border-radius: .25rem
-  padding: .25rem .75rem
-  text-align: center
-  color: $colorLight
-  background-color: $colorAccent
   cursor: pointer
-  transition: box-shadow 125ms linear
-
-  &:hover
-    box-shadow: inset 0 0 .25rem 0 $colorDarkTrans
-
-  &:active
-    box-shadow: inset 0 0 .5rem 0 $colorDarkTrans
 
 // General classes
 .container
