--- a/src/styles/_modals.sass
+++ b/src/styles/_modals.sass
@@ -77,7 +77,6 @@
       height: 100%
       background: no-repeat center center / 100%
       flex: 0 0 1.5rem
-      cursor: pointer
 
     .prev
       background-image: url('back.svg')
@@ -106,7 +105,7 @@
       position: relative
       overflow: hidden
       transition: flex 250ms linear
-      cursor: pointer
+      outline: none
 
       img
         width: 100%
@@ -132,7 +131,6 @@
   right: .5rem
   top: .5rem
   background: url('close.svg') no-repeat center center / 100%
-  cursor: pointer
 
 .modal-backdrop
   width: 100%
