--- a/src/styles/_sections.sass
+++ b/src/styles/_sections.sass
@@ -13,6 +13,7 @@ header
 
   .logo
     @extend .no-select
+    display: block
     position: relative
     height: 100%
 
@@ -178,10 +179,10 @@ section.gallery
       padding: .25rem
 
     .image-box
+      display: block
       position: relative
       flex: 1 1 100%
       padding: .25rem
-      cursor: pointer
 
       img
         width: auto
@@ -257,6 +258,18 @@ form[name='ask']
 
   button
     margin: 1rem 0
+    border-radius: .25rem
+    padding: .25rem .75rem
+    text-align: center
+    color: $colorLight
+    background-color: $colorAccent
+    transition: box-shadow 125ms linear
+
+    &:hover
+      box-shadow: inset 0 0 .25rem 0 $colorDarkTrans
+
+    &:active
+      box-shadow: inset 0 0 .5rem 0 $colorDarkTrans
 
   .status
     height: 0
